[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pre-commit-hooks"
version = "0.1.0"
description = ""
authors = [ "Jjazh <coombes.jd@gmail.com>",]

[tool.poetry.dev-dependencies]
example-pypi-package = "^0.1.0"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies.black]
version = "^22.3.0"
allow-prereleases = true
